--- a/src/app/mi-diagrama/mi-diagrama.component.html
+++ b/src/app/mi-diagrama/mi-diagrama.component.html
@@ -6,6 +6,9 @@
     <img src="../../assets/images/icons/info.png" width="25" height="25" class="m-3" title="More info..." alt="">
 </div>
 
-<div class="container-fluid ">
-    <img src="../../assets/images/backgrounds/midiagramabg.png" style="width: 100%; height: 100%;" alt="">
+<!-- tree served area to add its logic inside the div   -->
+
+<div class="container bg">
+    <img src="../../assets/images/Tree - Active Users.png" class="m-2" alt="">
+
 </div>
