--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -17,8 +17,8 @@
     <ul class="nav nav-pills py-3 flex-column mb-auto">
         <!-- Dashboard -->
         <li class="nav-item">
-            <a class="nav-link text-white" routerLink="" routerLinkActive="active">
-                <i class="bi bi-person-fill me-2 fs-5"></i>Mi
+            <a class="nav-link text-white" routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                <i class="bi bi-person-fill ms-4 me-2 fs-5"></i>Mi
                 Perfile
             </a>
         </li>
@@ -26,61 +26,61 @@
         <!-- Layout builder -->
         <li class="nav-item">
             <a class="nav-link text-white" routerLink="capturadeventa" routerLinkActive="active">
-                <img src="../../assets/images/icons/Vector (1).png" width="16" height="16" class="me-2"
+                <img src="../../assets/images/icons/Vector (1).png" width="16" height="16" class="ms-4 me-2"
                     alt="user icon">Captura Venta
             </a>
         </li>
 
         <li class="nav-item">
             <a class="nav-link text-white" routerLink="oc" routerLinkActive="active">
-                <img src="../../assets/images/icons/Vector (1).png" width="16" height="16" class="me-2"
+                <img src="../../assets/images/icons/Vector (1).png" width="16" height="16" class="ms-4 me-2"
                     alt="user icon">Captura Venta OC
             </a>
         </li>
 
         <li class="nav-item">
             <a class="nav-link text-white" routerLink="ventas" routerLinkActive="active">
-                <img src="../../assets/images/icons/Group 1.png" width="16" height="16" class="me-2"
+                <img src="../../assets/images/icons/Group 1.png" width="16" height="16" class="ms-4 me-2"
                     alt="user icon">Ventas
             </a>
         </li>
 
         <li class="nav-item">
             <a class="nav-link text-white" routerLink="miIngresos" routerLinkActive="active">
-                <img src="../../assets/images/icons/Vector (2).png" width="16" height="16" class="me-2"
+                <img src="../../assets/images/icons/Vector (2).png" width="16" height="16" class="ms-4 me-2"
                     alt="user icon">Mis Ingresos
             </a>
         </li>
 
         <li class="nav-item">
             <a class="nav-link text-white" routerLink="miDiagrama" routerLinkActive="active">
-                <img src="../../assets/images/icons/Vector (3).png" width="16" height="16" class="me-2"
+                <img src="../../assets/images/icons/Vector (3).png" width="16" height="16" class="ms-4 me-2"
                     alt="user icon">Mi Diagrama
             </a>
         </li>
 
         <li class="nav-item">
             <a class="nav-link text-white" routerLink="misPaginas" routerLinkActive="active">
-                <i class="bi bi-flag-fill me-2 fs-5"></i>Mi
+                <i class="bi bi-flag-fill ms-4 me-2 fs-5"></i>Mi
                 Paginas
             </a>
         </li>
 
         <li class="nav-item">
             <a class="nav-link text-white" routerLink="agregarHijos" routerLinkActive="active">
-                <i class="bi bi-person-plus-fill me-2 fs-5"></i>Agregar Hijos
+                <i class="bi bi-person-plus-fill ms-4 me-2 fs-5"></i>Agregar Hijos
             </a>
         </li>
 
         <li class="nav-item">
             <a class="nav-link text-white" routerLink="micomunidad" routerLinkActive="active">
-                <i class="bi bi-people-fill me-2 fs-5"></i>Mi
+                <i class="bi bi-people-fill ms-4 me-2 fs-5"></i>Mi
                 Comunidad
             </a>
         </li>
         <li class="nav-item">
             <a class="nav-link text-white" routerLink="reportes" routerLinkActive="active">
-                <img src="../../assets/images/icons/Group 3.png" width="16" height="16" class="me-2"
+                <img src="../../assets/images/icons/Group 3.png" width="16" height="16" class="ms-4 me-2"
                     alt="user icon">Reportes
             </a>
         </li>
