--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <div class=" d-flex justify-content-between p-3">
 
   <!-- left data  -->
-  <div class=" d-flex align-items-center col-6 me-4 ms-0" >
+  <div class=" d-flex align-items-center col-6 me-4 ms-0">
 
     <div class=" pe-2 ">
       <h5 class="text-center fw-bold mb-2">Communidad</h5>
@@ -9,9 +9,9 @@
       <div class="text-nowrap fs-s">Comision: MX 1,525.20</div>
     </div>
 
-<div class="fading-border text-white m-2">.</div>
-    
-<div class="p-2">
+    <div class="fading-border text-white m-2">.</div>
+
+    <div class="p-2">
       <h5 class="text-center fw-bold mb-2">Instalado</h5>
       <div class="line text-nowrap fs-s">30 Dias:MX33.140.00</div>
       <div class="text-nowrap fs-s">En Semena: MX990.00</div>
@@ -24,9 +24,9 @@
       <div style="color: red;" class="line text-nowrap fs-s">En Semana: MX0.00</div>
       <div style="color: red;" class="text-nowrap fs-s">Semana Ant: MX480.00</div>
     </div>
-    
+
     <div class="fading-border text-white m-2">.</div>
-    
+
     <div class="p-2">
       <h5 class="text-center fw-bold mb-2">Caidas</h5>
       <div style="color: red;" class="line text-wrap fs-s">En Semana: 0</div>
@@ -50,118 +50,261 @@
     </div>
 
     <!-- checklist button  -->
-    <div class="dropdown me-2">
-      <button class="d-block  d-flex align-items-center dropdown-toggle" data-bs-toggle="dropdown">
+    <div class="dropdown">
+      <button class="d-block  d-flex align-items-center" data-bs-toggle="dropdown" data-bs-target="#checklist"
+        data-bs-auto-close="outside">
         <img src="../../assets/images/icons/Vector (4).png" height="19" width="19" />
       </button>
-      <div class="dropdown-menu p-0">
-        <div style="background-color: #33b5ff;" class="d-flex justify-content-between align-items-center p-2">
-          <h4 class="text-white fw-bold ms-3 me-5 mb-0 text-center align-text-bottom">Messages</h4>
-          <button type="button" class="btn-close btn-close-white mx-3"></button>
+      <!-- checklist menu   -->
+      <div class="dropdown-menu p-0" id="checklist">
+        <!-- blue header  -->
+        <div class="dropdown-header p-3 d-flex justify-content-between" style="background-color: #33b5ff;">
+          <h4 class="text-white fw-bold ms-3 me-5 mb-0 text-center align-text-bottom" id="notificationsMenuLabel">
+            Checklist by Andrea Yamiliet</h4>
+          <button type="button" class="btn-close btn-close-white mx-3" data-bs-toggle="collapse"
+            data-bs-target="#checklist"></button>
         </div>
-      </div>
-    </div>
 
-  <!-- dropdown end  -->
-  <!-- Messages -->
+        <!-- tree start  -->
+        <div class="dropdown-item">
+          <!-- collapsing data 1 -->
+          <div class="card mb-3">
+            <div class="card-header name d-flex justify-content-between" data-bs-toggle="collapse" href="#sale"
+              (click)="toggleCollapse()">
+              <a class="btn">
+                <span *ngIf="isCollapsed" class="me-2"><i class="bi bi-plus-circle-fill text-primary fs-5"></i></span>
+                <span *ngIf="!isCollapsed" class="me-2"><i class="bi bi-dash-circle-fill text-danger fs-5"></i></span>
+                Personal
+              </a>
+            </div>
 
-
-    <!-- <div class="p-0" id="checklist">
-      <div style="background-color: #33b5ff;" class="d-flex justify-content-between align-items-center p-2"
-        data-bs-toggle="collapse" href="#personal">
-        <h4 class="text-white fw-bold ms-3 me-5 mb-0 text-center align-text-bottom">Checklist by Andrea Yamiliet</h4>
-        <button type="button" class="btn-close btn-close-white mx-3" (click)="toggleCollapse()"
-          data-bs-toggle="collapse" href="#checklist"></button>
-      </div>
-
-           <div class="dropdown">
-        <div class="card m-3" id="personal">
-          <div class="card-header name d-flex justify-content-between align-items-center accordion"
-            data-bs-toggle="collapse" href="#sale">
-            <a class="btn">
-              <span *ngIf="isCollapsed" class="me-2"><i class="bi bi-plus-circle-fill"
-                  style="color: #33b5ff;"></i></span>
-              <span *ngIf="!isCollapsed" class="me-2"><i class="bi bi-dash-circle-fill"
-                  style="color: #33b5ff;"></i></span>
-              Personal
-            </a>
-            <i class="bi bi-x-circle-fill text-danger"></i>
-          </div>
-
-          
-
-
-          <div id="sale">
-            <div class="card-body data p-0">
-              <div class="card-header data p-2 d-flex justify-content-between align-items-baseline accordion"
-                data-bs-toggle="collapse" href="#tasks">
-                <a class="btn">
-                  Sale 2
-                </a>
-                <div>
-                  <i class="bi bi-x-circle-fill text-danger me-2"></i>
-                </div>
-              </div>
-
-              <div class="card-body data p-0 m-2" id="tasks">
-                <div class="mx-2">
-                  <div class="d-flex justify-content-between mb-4">
-                    Sales under review (0)
-                    <i class="bi bi-x-circle-fill text-danger"></i>
-                  </div>
-                  <div class="d-flex justify-content-between mb-4">
-                    Confirm sales (0)
-                    <i class="bi bi-check-circle-fill text-success"></i>
-                  </div>
-                  <div class="d-flex justify-content-between mb-4">
-                    Not Done (0)
-                    <i class="bi bi-check-circle-fill text-success"></i>
-                  </div>
-                  <div class="d-flex justify-content-between mb-4">
-                    Canceled (1)
-                    <i class="bi bi-check-circle-fill text-success"></i>
-                  </div>
-                  <div class="d-flex justify-content-between mb-4">
-                    Canceled (1)
-                    <i class="bi bi-check-circle-fill text-success"></i>
+            <div id="sale" class="collapse" data-bs-toggle="collapse" href="#saleTasks" (click)="toggleCollapse()">
+              <div class="card-body show data p-0">
+                <div class="card-header data m-0 p-3 d-flex justify-content-between align-items-baseline">
+                  <a class="btn">
+                    Sale 2
+                  </a>
+                  <div>
+                    <i class="bi bi-x-circle-fill text-danger me-2" (click)="toggleCollapse()"></i>
                   </div>
                 </div>
               </div>
             </div>
+            <div class="card-body data p-3 collapse" id="saleTasks" data-bs-toggle="collapse"
+              (click)="toggleCollapse()">
+              <div class="mx-2">
+                <div class="d-flex justify-content-between mb-4">
+                  Sales under review (0)
+                  <i class="bi bi-x-circle-fill text-danger"></i>
+                </div>
+                <div class="d-flex justify-content-between mb-4">
+                  Confirm sales (0)
+                  <i class="bi bi-check-circle-fill text-success"></i>
+                </div>
+                <div class="d-flex justify-content-between mb-4">
+                  Not Done (0)
+                  <i class="bi bi-check-circle-fill text-success"></i>
+                </div>
+                <div class="d-flex justify-content-between mb-4">
+                  Canceled (1)
+                  <i class="bi bi-x-circle-fill text-danger"></i>
+                </div>
+                <div class="d-flex justify-content-between mb-4">
+                  Canceled (1)
+                  <i class="bi bi-x-circle-fill text-danger"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- collapsing data 2 -->
+          <div class="card mb-3">
+            <div class="card-header name d-flex justify-content-between" data-bs-toggle="collapse" href="#pages"
+              (click)="toggleCollapse()">
+              <a class="btn">
+                <span *ngIf="isCollapsed" class="me-2"><i class="bi bi-plus-circle-fill text-success fs-5"></i></span>
+                <span *ngIf="!isCollapsed" class="me-2"><i class="bi bi-dash-circle-fill text-danger fs-5"></i></span>
+                Pages
+              </a>
+            </div>
+
+            <div class="card-body data p-3 collapse" id="pages" data-bs-toggle="collapse" (click)="toggleCollapse()">
+              <div class="mx-2">
+                <div class="border-bottom mt-2">
+                  <h4 class="fw-bold mb-0">72.6 0/1</h4>
+                  <div class="d-flex justify-content-between">
+                    <p class="greytext fs-6">Andrea Yamilet</p>
+                    <i class="bi bi-x-circle-fill text-danger"></i>
+                  </div>
+                </div>
+
+                <div class="border-bottom mt-4">
+                  <h4 class="fw-bold mb-0">72.5 3/3</h4>
+                  <div class="d-flex justify-content-between">
+                    <p class="greytext fs-6">Diego</p>
+                    <i class="bi bi-check-circle-fill text-success"></i>
+                  </div>
+                  <div class="d-flex justify-content-between">
+                    <p class="greytext fs-6">Andrea Yamilet</p>
+                    <i class="bi bi-check-circle-fill text-success"></i>
+                  </div>
+                  <div class="d-flex justify-content-between">
+                    <p class="greytext fs-6">Mario Ademar</p>
+                    <i class="bi bi-check-circle-fill text-success"></i>
+                  </div>
+                </div>
+
+                <div class="border-bottom mt-4">
+                  <h4 class="fw-bold mb-0">72.4 2/2</h4>
+                  <div class="d-flex justify-content-between">
+                    <p class="greytext fs-6">Andrea Yamilet</p>
+                    <i class="bi bi-check-circle-fill text-success"></i>
+                  </div>
+                  <div class="d-flex justify-content-between">
+                    <p class="greytext fs-6">Diego</p>
+                    <i class="bi bi-check-circle-fill text-success"></i>
+                  </div>
+                </div>
+
+                <div class="border-bottom mt-4">
+                  <h4 class="fw-bold mb-0">72.3 4/4</h4>
+                  <div class="d-flex justify-content-between">
+                    <p class="greytext fs-6">Arlette Lilian</p>
+                    <i class="bi bi-check-circle-fill text-success"></i>
+                  </div>
+                  <div class="d-flex justify-content-between">
+                    <p class="greytext fs-6">Andrea Yamillet</p>
+                    <i class="bi bi-check-circle-fill text-success"></i>
+                  </div>
+                  <div class="d-flex justify-content-between">
+                    <p class="greytext fs-6">Carlos Antonio</p>
+                    <i class="bi bi-check-circle-fill text-success"></i>
+                  </div>
+                  <div class="d-flex justify-content-between">
+                    <p class="greytext fs-6">Laida Pamela</p>
+                    <i class="bi bi-check-circle-fill text-success"></i>
+                  </div>
+                </div>
+
+                <div class="border-bottom mt-4">
+                  <h4 class="fw-bold mb-0">72.2 4/4</h4>
+                  <div class="d-flex justify-content-between">
+                    <p class="greytext fs-6">Arleth</p>
+                    <i class="bi bi-check-circle-fill text-success"></i>
+                  </div>
+                  <div class="d-flex justify-content-between">
+                    <p class="greytext fs-6">Jesus Manuel</p>
+                    <i class="bi bi-check-circle-fill text-success"></i>
+                  </div>
+                  <div class="d-flex justify-content-between">
+                    <p class="greytext fs-6">Andrea Yamilet</p>
+                    <i class="bi bi-check-circle-fill text-success"></i>
+                  </div>
+                  <div class="d-flex justify-content-between">
+                    <p class="greytext fs-6">Art Lizbeth</p>
+                    <i class="bi bi-check-circle-fill text-success"></i>
+                  </div>
+                </div>
+
+                <div class="border-bottom mt-4">
+                  <h4 class="fw-bold mb-0">72.1 4/4</h4>
+                  <div class="d-flex justify-content-between">
+                    <p class="greytext fs-6">Andrea Yamilet</p>
+                    <i class="bi bi-check-circle-fill text-success"></i>
+                  </div>
+                  <div class="d-flex justify-content-between">
+                    <p class="greytext fs-6">Raul</p>
+                    <i class="bi bi-check-circle-fill text-success"></i>
+                  </div>
+                  <div class="d-flex justify-content-between">
+                    <p class="greytext fs-6">Laura Daniela</p>
+                    <i class="bi bi-check-circle-fill text-success"></i>
+                  </div>
+                  <div class="d-flex justify-content-between">
+                    <p class="greytext fs-6">Paulo Roberto</p>
+                    <i class="bi bi-check-circle-fill text-success"></i>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+          </div>
+
+          <!-- collapsing data 3 -->
+          <div class="card mb-3">
+            <div class="card-header name d-flex justify-content-between bg-warning-subtle" data-bs-toggle="collapse" href="#community"
+              (click)="toggleCollapse()">
+              <a class="btn">
+                <span *ngIf="isCollapsed" class="me-2"><i class="bi bi-plus-circle-fill fs-5" style="color: chocolate;"></i></span>
+                <span *ngIf="!isCollapsed" class="me-2"><i class="bi bi-dash-circle-fill text-danger fs-5"></i></span>
+                Community
+              </a>
+            </div>
+
+            <div id="community" class="collapse" data-bs-toggle="collapse" (click)="toggleCollapse()">
+              <div class="mx-2">
+                <div class="p-2 d-flex justify-content-between" style="border-bottom: 1px solid chocolate">
+                  <h4 class="m-0">Ariette Mata</h4>
+                  <p class="fs-6">3/7</p>
+                </div>
+                <div class="p-2 d-flex justify-content-between" style="border-bottom: 1px solid chocolate">
+                  <h4 class="m-0">Hector Flores</h4>
+                  <p class="fs-6">5/7</p>
+                </div>
+                <div class="p-2 d-flex justify-content-between" >
+                  <h4 class="m-0">Layda Cabrera</h4>
+                  <p class="fs-6">3/7</p>
+                </div>
+              </div>
+            </div>
+           
           </div>
         </div>
-      </div> -->
-
-    <!-- calendar button  -->
-    <div class="dropdown  d-flex align-items-center dropdown-toggle me-2" data-bs-toggle="dropdown">
-      <button class="app-navbar-item me-1">
-        <img src="../../assets/images/icons/calender.png" height="18" width="18" />
-      </button>
-    </div>
-
-    <div class="dropdown-menu p-0">
-      <div style="background-color: #33b5ff;" class="d-flex justify-content-between align-items-center p-2">
-        <h4 class="text-white fw-bold ms-3 me-5 mb-0 text-center align-text-bottom">Messages</h4>
-        <button type="button" class="btn-close btn-close-white mx-3"></button>
       </div>
     </div>
 
+
+    <!-- calendar button  -->
+    <div class="dropdown">
+      <button class="d-block  d-flex align-items-center" data-bs-toggle="dropdown" data-bs-target="#calendar"
+        data-bs-auto-close="outside">
+        <img src="../../assets/images/icons/calender.png" height="18" width="18" />
+      </button>
+      <div class="dropdown-menu p-0" id="calendar">
+        <!-- blue header  -->
+        <div class="dropdown-header p-3 d-flex justify-content-between" style="background-color: #33b5ff;">
+          <h4 class="text-white fw-bold ms-3 me-5 mb-0 text-center align-text-bottom" id="notificationsMenuLabel">
+            Calendar</h4>
+          <button type="button" class="btn-close btn-close-white mx-3" data-bs-toggle="collapse"
+            data-bs-target="#calendar"></button>
+        </div>
+
+        <!-- calendar start  -->
+        <div class="main">
+        </div>
+      </div>
+    </div>
+
+
     <!-- whatsapp button  -->
-    <div class="dropdown me-2">
-      <button class="app-navbar-item me-1">
+    <div class="dropdown">
+      <button class="d-block  d-flex align-items-center" data-bs-toggle="dropdown" data-bs-target="#whatsapp"
+        data-bs-auto-close="outside">
         <img src="../../assets/images/icons/whatsapp.png" height="20" width="20" />
       </button>
     </div>
 
     <!-- chat button  -->
-    <div class="dropdown me-2">
-      <button class="d-block  d-flex align-items-center dropdown-toggle" data-bs-toggle="dropdown">
+    <div class="dropdown">
+      <button class="d-block  d-flex align-items-center" data-bs-toggle="dropdown" data-bs-target="#chat"
+        data-bs-auto-close="outside">
         <img src="../../assets/images/icons/chat.png" height="18" width="18" />
       </button>
-      <div class="dropdown-menu p-0">
+      <div class="dropdown-menu p-0" id="chat">
         <div style="background-color: #33b5ff;" class="d-flex justify-content-between align-items-center p-2">
           <h4 class="text-white fw-bold ms-3 me-5 mb-0 text-center align-text-bottom">Messages</h4>
-          <button type="button" class="btn-close btn-close-white mx-3"></button>
+          <button type="button" class="btn-close btn-close-white mx-3" data-bs-toggle="collapse"
+            data-bs-target="#chat"></button>
         </div>
 
         <!-- Messages -->
@@ -227,11 +370,12 @@
 
     <!-- notification button  -->
     <div class="dropdown">
-      <button class="d-block me-2 d-flex align-items-start dropdown-toggle position-relative" data-bs-toggle="dropdown">
+      <button class="d-block  d-flex align-items-center" data-bs-toggle="dropdown" data-bs-target="#notification"
+        data-bs-auto-close="outside">
         <i class="bi bi-bell-fill fs-5"></i>
         <span class="rounded-circle px-1 up bg-danger badge">3</span>
       </button>
-      <div class="dropdown-menu p-0">
+      <div class="dropdown-menu p-0" id="notification">
         <div style="background-color: #33b5ff;" class="d-flex justify-content-between p-2 rounded-top-3">
           <div class="d-flex">
             <h4 class="text-white fw-bold me-2">Notifications</h4>
@@ -240,11 +384,12 @@
           <div class="d-flex">
             <label class="switch me-2">
               <input type="checkbox">
-              
+
               <span class="slider round"></span>
             </label>
             <i class="bi bi-gear text-white me-2"></i>
-            <button type="button" class="btn-close btn-close-white"></button>
+            <button type="button" class="btn-close btn-close-white" data-bs-toggle="collapse"
+              data-bs-target="#notification"></button>
           </div>
         </div>
         <div class="bg-secondary-subtle p-2 d-flex justify-content-center">
