--- a/src/app/top-20-slider/top-20-slider.component.html
+++ b/src/app/top-20-slider/top-20-slider.component.html
@@ -1,4 +1,4 @@
-<ul class="bxslider d-flex align-items-top" id="top20">
+<ul class="bxslider d-flex align-items-top" [ngClass]="{'darktop20': darkMode}" id="top20">
     <li class="">
         <img src="../../assets/images/avatar/Ellipse 6.png" />
         <span class="sliderbadge badge rounded-circle">9</span>
