--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-<div class="container-fluid m-0 p-0" ></div>>
-  <div class="d-flex flex-column">
+  <div class="d-flex flex-column" [ngClass]="{'dark-mode': darkMode}" class="app-container">
     <div class="d-flex align-items-center">
       <!-- logo  -->
       <img src="../../assets/images/logo/pakoalogo 1.png" alt="pakoa logo" width="170" height="70" class="ms-3" [ngClass]="{'collapse' : !isSidebarOpen}">
